syntax = "proto3";

message ClassRequest {
    string id = 1;
    oneof type {
        EndClassRequest end_class = 2;
        SetHostRequest set_host = 3;
        SetContentRequest set_content = 4;
        SetActivityStreamIdRequest set_actvity_stream_id = 5;
        RewardTrophyToUserRequest reward_trophy_to_user = 6;
        RewardTrophyToAllRequest reward_trophy_to_all = 7;
        SendChatMessageRequest send_chat_message = 8;
    }
}

message ClassResponse {
    string id = 1;
    string error = 2;
}

message ClassEvent {
    string id = 1;
    oneof type {
        ClassResponse acknowledge = 2;
        SetClassStateEvent set_room_state = 3;
        ClassEndedEvent class_ended = 4;
        DeviceConnectedEvent device_connected = 5;
        DeviceDisconnectedEvent device_disconnected = 6;
        HostChangedEvent host_changed = 7;
        ContentChangedEvent content_changed = 8;
        NewChatMessageEvent new_chat_message = 9;
        ActivityStreamIdChangedEvent actvity_stream_id_changed = 10;
        TrophyRewardedToUserEvent trophy_rewarded_to_user = 11;
        TrophyRewardedToAllEvent trophy_rewarded_to_all = 12;
    }
}

/* ======= COMMANDS ======= */

message EndClassRequest {}

message SetHostRequest {
    string host_user_id = 1;
}

message SetContentRequest {
    Content content = 1;
}

message SetActivityStreamIdRequest {
    string device_id = 1;
    string activity_stream_id = 2;
}

message RewardTrophyToUserRequest {
    string user_id = 1;
    Trophy trophy = 2;
}

message RewardTrophyToAllRequest {
    Trophy trophy = 1;
}

message SendChatMessageRequest {
    string message = 1;
}

/* ======= END COMMANDS ======= */



/* ======= EVENTS ======= */

message SetClassStateEvent {
    ClassState state = 1;
}

message ClassEndedEvent {
    uint64 timestamp = 1;
}

message DeviceConnectedEvent {
    string name = 1;
    Device device = 2;
}

message DeviceDisconnectedEvent {
    string device_id = 1;
}

message HostChangedEvent {
    string host_user_id = 1;
}

message ContentChangedEvent {
    Content content = 1;
}

message ActivityStreamIdChangedEvent {
    string device_id = 1;
    string activity_stream_id = 2;
}

message TrophyRewardedToUserEvent {
    string user_id = 1;
    Trophy trophy = 2;
}

message TrophyRewardedToAllEvent {
    Trophy trophy = 1;
}

message NewChatMessageEvent {
    ChatMessage chat_message = 1;
}

/* ======= END EVENTS ======= */




/* ======= DATA ======= */

message ClassState {
    map<string, User> users = 1;
    map<string, Device> devices = 2;
    repeated ChatMessage chat_messages = 3;
    Content content = 4;
    string host_user_id = 5;
    uint64 class_ended_time = 6; 
}

message User {
    string id = 1;
    string name = 2;
    repeated Trophy trophies = 3;
    repeated string device_ids = 4;
}

message Trophy {
    uint64 timestamp = 1;
    string type = 2;
}

message Device {
    string id = 1;
    string user_id = 2;
    string activity_stream_id = 3;
    repeated string web_rtc_stream_ids = 4;
}

message ChatMessage {
    string user_id = 1;
    uint64 timestamp = 2;
    string text = 3;
}

message Content {
    ContentType type = 1;
    string content_location = 2;
}

enum ContentType {
    Blank = 0;
    Stream = 1; // Consume a DOM (Activity) stream
    Activity = 2; //Produce a DOM (Activity) Stream
    Video = 3;
    Audio = 4;
    Image = 5;
    Camera = 6;
    Screen = 7;
}

/* ======= END DATA ======= */